Updated Weather app

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,8 +15,8 @@
                         </figure>
                     </div>
                     <div class="col-md-6 col-12 main_header_left">
-                        <p>Welcome to Weather APP</p>
-                        <h1>I am a  <span> Mern Stack Developer </span> and i live in Capital.</h1>
+                        <p>Welcome to check my Weather APP</p>
+                        <h1>I am learning <span> Mern Stack Development </span> and i live in Capital City of Pakistan.</h1>
                         <a href="https://www.linkedin.com/in/muhammad-awais-9b5277228/" target="_blank"><button>About Me</button></a>
                     </div>
                 </div>
