--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,21 +14,30 @@
                         <h1>Get the latest <span> Weather </span> Info of your city.</h1>
                         <a href="/weather"><button>Check Now</button></a>
                     </div>
-                    <div class="col-md-6 col-12 main_header_right">
-                        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                      <div class="col-md-6 col-12 main_header_right">
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
-                              <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="images/bg1.jpg" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item" data-bs-interval="2000">
-                                <img src="images/bg3.jpg" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item">
-                                <img src="images/bg4.jpg" class="d-block w-100" alt="...">
-                              </div>
+                                <div class="carousel-item active">
+                                    <img class="w-100" src="images/bg1.jpg" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="w-100" src="images/bg3.png" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="w-100" src="images/bg2.png" alt="Third slide">
+                                </div>
                             </div>
-
-                          </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
