--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
                     <div class="col-md-6 col-12 main_header_left">
                         <p>Welcome to Weather APP</p>
                         <h1>Get the latest <span> Weather </span> Info of your city.</h1>
-                        <a href="/weather"><button>Check Now</button></a>
+                        <a href="/login"><button>Check Now</button></a>
                     </div>
                       <div class="col-md-6 col-12 main_header_right">
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
