--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -15,10 +15,16 @@
                             <a class="nav-link" href="/">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/weather">Weather</a>
+                            <a class="nav-link" href="/about">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/about">About</a>
+                            <a class="nav-link" href="/contact">Contact Us</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/signup">Sign Up</a>
                           </li>
                         </ul>
                       </div>
